--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -12,9 +12,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      PG_USER: ${PG_USER}
-      PG_PASSWORD: ${PG_PASSWORD}
-      PG_DATABASE: ${PG_DATABASE}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
       SECRET_KEY: ${SECRET_KEY}
       DATABASE_URL: ${DATABASE_URL}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
@@ -25,9 +25,10 @@ services:
   postgres:
     image: postgres:14
     environment:
-      PG_USER: ${PG_USER}
-      PG_PASSWORD: ${PG_PASSWORD}
-      PG_DATABASE: ${PG_DATABASE}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
+      POSTGRES_HOST_AUTH_METHOD: "trust"
     ports:
       - "5432:5432" # Expose the port (only for development/debugging)
     volumes:
@@ -39,9 +40,9 @@ services:
       - redis
       - postgres
     environment:
-      PG_USER: ${PG_USER}
-      PG_PASSWORD: ${PG_PASSWORD}
-      PG_DATABASE: ${PG_DATABASE}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DATABASE: ${POSTGRES_DATABASE}
       REDIS_PASSWORD: ${REDIS_PASSWORD}
       REDIS_HOST: ${REDIS_HOST}
       DATABASE_URL: ${DATABASE_URL}
@@ -49,7 +50,7 @@ services:
       replicas: 3
       resources: # Set resource limits
         limits:
-          cpus: '0.25' # Limit CPU usage per worker
+          cpus: "0.25" # Limit CPU usage per worker
           memory: 256M # Limit memory per worker
   redis:
     image: redis:6.2-alpine
