--- a/sample.env
+++ b/sample.env
@@ -2,9 +2,9 @@
 # Server port
 PORT=8080
 
-PG_USER=postgres
-PG_PASSWORD=postgres
-PG_DATABASE=scraper
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DATABASE=scraper
 
 REDIS_HOST=redis
 REDIS_PASSWORD=supersecret123
