--- a/server/env.sample
+++ b/server/env.sample
@@ -1,6 +1,6 @@
-PG_USER=postgres
-PG_PASSWORD=postgres
-PG_DATABASE=scraper
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DATABASE=scraper
 
 REDIS_PASSWORD=supersecret123
 REDIS_HOST=127.0.0.1
